assets/src/scss/layout/footer.scss
/**
 * Footer
 */

// Import abstracts
@import "../abstracts/_abstracts.scss";

.footer {
  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
  z-index: 2;

  a {
    &:hover,
    &:focus,
    &:visited {
      color: unset;
    }
  }

  a.footer-button--light {
    background-color: $color-white;
    color: $color-black;

    &:hover,
    &:focus {
      background-color: $color-black;
      color: $color-white;
    }

    &:focus {
      outline-color: $color-white;
      outline-offset: -4px;
      outline-style: solid;
      outline-width: 2px;
    }
  }

  a.footer-button--dark {
    background-color: $color-black;
    color: $color-white;

    &:hover,
    &:focus {
      background-color: $color-white;
      color: $color-black;
    }

    &:focus {
      box-shadow: 0px 0px 0px 1px $color-black inset;
      outline-color: $color-black;
      outline-offset: -6px;
      outline-style: solid;
      outline-width: 2px;
    }
  }
}

.footer-main {
  background-color: $color-white;
  padding: fix-font-size-hack(4em) 0;

  .tel {
    margin: 0;
    padding: 0;
    white-space: nowrap;
    text-decoration: underline;
  }
}

.footer-contact {
  margin-bottom: fix-font-size-hack(3em);
  transition: margin-bottom 0.125s ease-out;
}

.footer-contact-inner--right {
  max-width: 14.25em;
}

.footer-address {
  text-align: left;

  p>span+span.contact-row:before {
    content: "|";
    padding: 0 0.25em 0 0;
    position: relative;
    top: -1px;
  }
}

.footer-address-title {
  align-items: flex-start;
  display: flex;
  flex-direction: row;
  font-size: fix-font-size-hack(1.25em);
  line-height: fix-font-size-hack(1.375em);
  margin-bottom: 1rem;

  svg {
    fill: $color-ul-red;
    flex-shrink: 0;
    height: 1.2em;
    margin-right: 0.5em;
    position: relative;
    top: -0.05em;
  }
}

.footer-address-title-unit,
.footer-address-title-subunit {
  display: block;
}

.footer-address-title-unit {
  font-weight: 700;
}

.footer-address-title-subunit {
  font-size: 0.9em;
  font-weight: 400;
  margin-left: -28px;
}

.footer-address-name {
  font-size: fix-font-size-hack(0.875em);
  font-weight: 700;
  margin-bottom: 0.25em;
}

.footer-address-infos {
  font-size: fix-font-size-hack(0.875em);
  margin-bottom: 1rem;

  &:last-child {
    margin-bottom: 0;
  }

  .contact-row {
    display: inline;
  }

  a {
    color: $color-black;
    text-decoration: none;
  }
}

.footer-social {
  display: flex;
  font-size: 1em;
  gap: fix-font-size-hack(0.75em);
  justify-content: flex-start;
  margin: fix-font-size-hack(1.5em) 0;

  li {
    display: flex;
    list-style-type: none;
  }

  a {
    background-color: $color-white;
    border: 1px solid transparent;
    display: inline-block;
    transition: background-color 0.125s ease;

    &:hover,
    &:focus {
      background-color: $color-black;
      border: 1px solid color-black;
      outline: none;

      svg {
        fill: $color-white;
      }
    }
  }

  svg {
    display: block;
    fill: $color-black;
    height: fix-font-size-hack(2em);
    padding: fix-font-size-hack(0.25em);
    transition: fill 0.125s ease;
    width: fix-font-size-hack(2em);
  }
}

.footer-button {
  border: 1px solid $color-black;
  display: block;
  font-size: fix-font-size-hack(1em);
  margin-left: auto;
  margin-right: auto;
  margin-top: 1em;
  padding: 0.771em 1.5em;
  text-align: center;
  text-decoration: none;

  &:hover,
  &:focus {
    text-decoration: none;
  }
}

.footer-utils {
  text-align: left;
}

.footer-navigation {
  li {
    font-size: fix-font-size-hack(0.875em);
    list-style-type: none;
  }

  a {
    color: $color-black;
    display: inline-block;
    text-decoration: none;
  }
}

.footer-navigation-group {
  & + .footer-navigation-group {
    margin-top: fix-font-size-hack(2em);
  }
}

.footer-navigation-title {
  font-size: fix-font-size-hack(0.875em);
  font-weight: 700;
  line-height: fix-font-size-hack(1.375em);
  margin-bottom: fix-font-size-hack(0.5rem);
}

.footer-emergency {
  margin-top: fix-font-size-hack(2em);
}

.footer-emergency-title {
  font-size: fix-font-size-hack(0.875em);
  font-weight: 700;
  margin: 0;
  margin-bottom: fix-font-size-hack(0.5rem);
}

.footer .footer-emergency-title a {
  color: $color-ul-red;
  text-decoration: none;
  text-transform: uppercase;
}

.footer-emergency-text {
  font-size: fix-font-size-hack(0.875em);

  a {
    margin: 0;
    padding: 0;

    color: $color-black;
    text-decoration: none;
  }
}

.footer-logos {
  margin-top: fix-font-size-hack(3em);
  text-align: center;
}

.footer-logo {
  display: inline-block;
  height: 52px;
  transition: filter 0.125s ease, opacity 0.125s ease;

  &:hover,
  &:focus {
    filter: grayscale(0%);
    opacity: 1;
  }

  &:focus {
    outline-color: $color-black;
    outline-style: dotted;
    outline-width: 1px;
    outline-offset: fix-font-size-hack(0.5em);
  }

  img {
    display: block;
    height: 100%;
    width: auto;
  }
}

.footer-accreditations {
  .menu {
    display: flex;
    flex-wrap: wrap;
    gap: fix-font-size-hack(1em) fix-font-size-hack(2em);
    justify-content: center;
    margin-bottom: fix-font-size-hack(3em);
  }
}

.footer-accreditations-title {
  font-size: fix-font-size-hack(0.875em);
  font-weight: 700;
  margin-bottom: fix-font-size-hack(1.5em);
}

.footer {
  .university-logo {
    display: block;
    width: 128px;
  }
}

.footer-bottom {
  background-color: $color-black;
  color: $color-white;
  padding-bottom: fix-font-size-hack(1em);
  padding-top: fix-font-size-hack(1em);
  text-align: center;
}

.footer-copyright {
  font-size: fix-font-size-hack(0.75em);
  margin-bottom: 0;

  span + span {
    &:before {
      content: "|";
      padding: 0 fix-font-size-hack(0.333em);
      position: relative;
      top: -1px;
    }
  }
}

.footer-legal {
  //first rules for footer-legal mobile fisrt
  font-size: fix-font-size-hack(0.75em);
  margin-bottom: 0;
  // margin-top: 0.5em;

  // li {
  //   display: block;
  //   margin-top: fix-font-size-hack(0.17em);
  // }

  a {
    color: $color-white;
    text-decoration: none;

    &:focus {
      outline-color: $color-gray-light;
    }
  }
  //moved rules fdrom 470px breakpoint back to first mobile rule breakpoint
  margin-top: 0;

    li {
      display: inline-block;
      margin-top: 0;

      &:before {
        content: "|";
        padding: 0 fix-font-size-hack(0.5em);
        position: relative;
        top: -1px;
      }
    }
}

@media (min-width: $breakpoint-sm) {
  .footer-navigation {
    align-items: flex-start;
    display: flex;
    gap: fix-font-size-hack(2em);
    justify-content: space-between;
  }

  .footer-navigation-group {
    flex: 1 1 33%;

    & + .footer-navigation-group {
      margin-top: 0;
    }
  }
}

@mixin website-container-type-breakpoint-670 {
  .footer-contact {
    display: flex;
    justify-content: space-between;
    gap: fix-font-size-hack(2em);
  }

  .footer-social {
    justify-content: flex-end;
    gap: fix-font-size-hack(1.175em);
    margin-bottom: 0;
    margin-top: fix-font-size-hack(-0.5em);
  }

  .footer-button {
    max-width: none;
    min-width: 12em;
  }

  .footer-utils {
    gap: fix-font-size-hack(2em);
  }

  .footer-logos {
    display: flex;
    justify-content: space-between;
    gap: fix-font-size-hack(2em);
  }

  .footer-bottom {
    text-align: left;
  }
}

@media (min-width: 670px) {
  @if $website-container-type == "fluid" {
    @include website-container-type-breakpoint-670;
  }
}

@media (min-width: $breakpoint-md) {
  @if $website-container-type == "fixed" {
    @include website-container-type-breakpoint-670;
  }

  .footer-address-title-inner {
    text-align: left;
  }

  .footer-utils {
    display: flex;
    justify-content: space-between;
    max-width: fix-font-size-hack(50em);
    transition: max-width 0.125s ease;
  }

  .footer-navigation {
    flex: 1 1 75%;
  }

  .footer-emergency {
    flex: 1 1 25%;
    margin-top: 0;
  }
  .footer-bottom-inner {
    display: flex;
    flex-wrap: wrap;
  }

  .footer-logos {
    text-align: left;
  }

  .footer-accreditations {
    .menu {
      margin-bottom: 0;
    }
  }

  .footer-copyright,
  .footer-legal {
    flex-shrink: 0;
  }

  .footer-legal {
    display: flex;

    li {
      display: flex;
    }
  }
}

@media (min-width: $breakpoint-lg) {
  .footer-contact {
    display: flex;
    justify-content: space-between;
  }
}

@media (min-width: $breakpoint-xl) {
  .footer-main {
    .tel {
      text-decoration: unset;
    }
  }

  .footer-utils {
    max-width: 72%;
  }
}

